simple_language_plugin/src/com/simpleplugin/Simple.bnf
{
  parserClass="com.simpleplugin.parser.SimpleParser"
  parserUtilClass="com.simpleplugin.parser.SimpleParserUtil"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Simple"
  psiImplClassSuffix="Impl"
  psiPackage="com.simpleplugin.psi"
  psiImplPackage="com.simpleplugin.psi.impl"

  elementTypeHolderClass="com.simpleplugin.psi.SimpleTypes"
  elementTypeClass="com.simpleplugin.psi.SimpleElementType"
  tokenTypeClass="com.simpleplugin.psi.SimpleTokenType"

  psiImplUtilClass="com.simpleplugin.psi.impl.SimplePsiImplUtil"
}

simpleFile ::= (property|COMMENT)*

property ::= (KEY SEPARATOR VALUE?)|KEY {
    pin=3
    recoverWhile="recover_property"
    mixin="com.simpleplugin.psi.impl.SimpleNamedElementImpl"
    implements="com.simpleplugin.psi.SimpleNamedElement"
    methods=[getKey getValue getName setName getNameIdentifier getPresentation]
}

private recover_property ::= !(KEY|SEPARATOR|COMMENT)
